--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
                                 Hi, I'm Duran Humes, a software engineer since
                                 2016. And as a professional software engineer
                                 I've had the opportunity to work on many
-                                different projects like, CMS's, inventory &
-                                sports league management systems, mobile apps,
-                                web sites/apps, search engines, hr management
-                                systems, ats's, banking systems, etc.
+                                projects like, CMS's, inventory & sports league
+                                management systems, mobile apps, web sites/apps,
+                                search engines, hr management systems, ats's,
+                                banking systems, etc.
                             </p>
                             <p>
                                 On each of these different projects I became
-                                aquatinted with many technologies and stacks
+                                acquainted with many technologies and stacks
                                 like, JavaScript, React, React-Native, Node.js,
                                 PHP, Ruby, Docker, etc.
                             </p>
                             <p>
-                                Lately, my main focus areas have been full stack
+                                Lately, my focus areas have been full stack
                                 development with React and Node.js while helping
                                 to mentor other devs and leading teams.
                             </p>
