--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
                                 Hi, I'm Duran Humes, a software engineer since
                                 2016. And as a professional software engineer
                                 I've had the opportunity to work on many
-                                projects like, CMS's, inventory & sports league
+                                projects like, CMS's, inventory/sports league/hr
                                 management systems, mobile apps, web sites/apps,
-                                search engines, hr management systems, ats's,
-                                banking systems, etc.
+                                search engines, ats's, banking systems, etc.
                             </p>
                             <p>
                                 On each of these different projects I became
