--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
                         </div>
                         <div>
                             <p>
-                                Hi, I'm Duran Humes, a software engineer since
-                                2016. And as a professional software engineer
-                                I've had the opportunity to work on many
-                                projects like, CMS's, inventory/sports league/hr
-                                management systems, mobile apps, web sites/apps,
-                                search engines, ats's, banking systems, etc.
+                                Hi, I'm Duran Humes, a professional software
+                                engineer since 2016. And as a professional
+                                software engineer I've had the opportunity to
+                                work on many projects like, CMS's,
+                                inventory/sports league/hr management systems,
+                                mobile apps, web sites/apps, search engines,
+                                ats's, banking systems, etc.
                             </p>
                             <p>
                                 On each of these different projects I became
@@ -102,6 +103,11 @@
                                 Lately, my focus areas have been full stack
                                 development with React and Node.js while helping
                                 to mentor other devs and leading teams.
+                            </p>
+                            <p>
+                                I'm also the host/creator of a local monthly
+                                tech meetup for devs where we discuss ideas and
+                                work together on different projects.
                             </p>
                         </div>
                     </div>
