--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 work on many projects like, CMS's,
                                 inventory/sports league/hr management systems,
                                 mobile apps, web sites/apps, search engines,
-                                ats's, banking systems, etc.
+                                e-commerce, banking systems, etc.
                             </p>
                             <p>
                                 On each of these different projects I became
