--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en" class="no-js">
+Y<html lang="en" class="no-js">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -86,7 +86,7 @@
                         <div>
                             <p>
                                 Hi, I'm Duran Humes, a professional software
-                                engineer since 2016. And as a professional
+                                engineer since 2016. As a professional
                                 software engineer I've had the opportunity to
                                 work on many projects like, CMS's,
                                 inventory/sports league/hr management systems,
@@ -102,11 +102,11 @@
                             <p>
                                 Lately, my focus areas have been full stack
                                 development with React and Node.js while helping
-                                to mentor other devs and leading teams.
+                                to mentor other software developers and leading teams.
                             </p>
                             <p>
                                 I'm also the host/creator of a local monthly
-                                tech meetup for devs where we discuss ideas and
+                                tech meetup for software developers where we discuss ideas and
                                 work together on different projects.
                             </p>
                         </div>
