--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Y<html lang="en" class="no-js">
+<html lang="en" class="no-js">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -91,7 +91,7 @@ Y<html lang="en" class="no-js">
                                 work on many projects like, CMS's,
                                 inventory/sports league/hr management systems,
                                 mobile apps, web sites/apps, search engines,
-                                e-commerce, banking systems, etc.
+                                e-commerce, etc.
                             </p>
                             <p>
                                 On each of these different projects I became
