--- a/index.html
+++ b/index.html
@@ -73,11 +73,6 @@
                                     target="_blank"
                                     ><img src="assets/github.svg" alt="github"
                                 /></a>
-                                <a
-                                    href="https://twitter.com/duranhumes"
-                                    target="_blank"
-                                    ><img src="assets/twitter.svg" alt="twitter"
-                                /></a>
                                 <a href="https://bit.ly/2Mj8eEf" target="_blank"
                                     ><img src="assets/resume.svg" alt="resume"
                                 /></a>
@@ -86,12 +81,11 @@
                         <div>
                             <p>
                                 Hi, I'm Duran Humes, a professional software
-                                engineer since 2016. As a professional
-                                software engineer I've had the opportunity to
-                                work on many projects like, CMS's,
-                                inventory/sports league/hr management systems,
-                                mobile apps, web sites/apps, search engines,
-                                e-commerce, etc.
+                                engineer since 2016. As a professional software
+                                engineer I've had the opportunity to work on
+                                many projects like, CMS's, inventory/sports
+                                league/hr management systems, mobile apps, web
+                                sites/apps, search engines, e-commerce, etc.
                             </p>
                             <p>
                                 On each of these different projects I became
@@ -102,12 +96,14 @@
                             <p>
                                 Lately, my focus areas have been full stack
                                 development with React and Node.js while helping
-                                to mentor other software developers and leading teams.
+                                to mentor other software developers and leading
+                                teams.
                             </p>
                             <p>
                                 I'm also the host/creator of a local monthly
-                                tech meetup for software developers where we discuss ideas and
-                                work together on different projects.
+                                tech meetup for software developers where we
+                                discuss ideas and work together on different
+                                projects.
                             </p>
                         </div>
                     </div>
