Added link text

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                         <div class="profile">
                             <img src="assets/profile.png" alt="Profile Image" />
                             <div class="icons">
+                                <p class="text">Links:</p>
                                 <a
                                     href="https://www.linkedin.com/in/duranhumes"
                                     target="_blank"
