--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
                                 <a href="https://bit.ly/2Mj8eEf" target="_blank"
                                     ><img src="assets/resume.svg" alt="resume"
                                 /></a>
+                                <a
+                                    href="mailto:duranhumes@gmail.com"
+                                    target="_blank"
+                                    ><img src="assets/email.svg" alt="email"
+                                /></a>
                             </div>
                         </div>
                         <div>
