Added static resume && updated mailto

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                                     target="_blank"
                                     ><img src="assets/github.svg" alt="github"
                                 /></a>
-                                <a href="https://bit.ly/2Mj8eEf" target="_blank"
+                                <a href="resume.pdf" target="_blank"
                                     ><img src="assets/resume.svg" alt="resume"
                                 /></a>
                                 <a
-                                    href="mailto:duranhumes@gmail.com"
+                                    href="mailto:duranhumes@gmail.com?subject=Don't open... jk jk&body=Hey Duran!"
                                     target="_blank"
                                     ><img src="assets/email.svg" alt="email"
                                 /></a>
