--- a/index.html
+++ b/index.html
@@ -4,44 +4,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Duran Humes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Duran Humes" />
+        <meta name="description" content="About Duran Humes" />
         <meta
             name="keywords"
-            content="Duran Humes, portfolio, Software Engineer, full stack developer, front end developer, back end developer"
+            content="Duran Humes, about, Software Engineer, full stack developer, front end developer, back end developer"
         />
         <meta name="author" content="Duran Humes" />
         <link rel="shortcut icon" href="favicon.ico" />
 
         <link rel="stylesheet" href="css/index.css" type="text/css" />
-        <!-- Google Tag Manager -->
-        <script>
-            (function(w, d, s, l, i) {
-                w[l] = w[l] || [];
-                w[l].push({
-                    'gtm.start': new Date().getTime(),
-                    event: 'gtm.js',
-                });
-                var f = d.getElementsByTagName(s)[0],
-                    j = d.createElement(s),
-                    dl = l != 'dataLayer' ? '&l=' + l : '';
-                j.async = true;
-                j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-                f.parentNode.insertBefore(j, f);
-            })(window, document, 'script', 'dataLayer', 'GTM-5XD6PM');
-        </script>
-        <!-- End Google Tag Manager -->
     </head>
     <body>
-        <!-- Google Tag Manager (noscript) -->
-        <noscript>
-            <iframe
-                src="https://www.googletagmanager.com/ns.html?id=GTM-5XD6PM"
-                height="0"
-                width="0"
-                style="display:none;visibility:hidden"
-            ></iframe>
-        </noscript>
-        <!-- End Google Tag Manager (noscript) -->
         <div class="main">
             <header>
                 <div class="name">
@@ -101,14 +74,14 @@
                             </p>
                             <p>
                                 Lately, my focus areas have been full stack
-                                development with React and Node.js while helping
-                                to mentor other software developers and leading
-                                teams.
+                                development with PHP & Docker as my tools of
+                                choice while helping to mentor other software
+                                developers and leading teams.
                             </p>
                             <p>
                                 I'm also the host/creator of a local monthly
-                                tech meetup for software developers where we
-                                discuss ideas and work together on different
+                                tech meetup group for software developers where
+                                we discuss ideas and work together on different
                                 projects.
                             </p>
                         </div>
@@ -125,6 +98,7 @@
                             <img src="assets/tech/node.png" alt="node" />
                             <img src="assets/tech/php.png" alt="php" />
                             <img src="assets/tech/ruby.png" alt="ruby" />
+                            <img src="assets/tech/docker.png" alt="docker" />
                         </div>
                     </div>
                 </section>
