--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
                                 PHP, Ruby, Docker, etc.
                             </p>
                             <p>
-                                Lately, my focus areas have been full stack
-                                development with PHP & Docker as my tools of
-                                choice while helping to mentor other software
-                                developers and leading teams.
+                                Lately, my focus has been on my company
+                                <a href="http://baseroadsoftware.com"
+                                    >Baseroad Software</a
+                                >
+                                building solutions for businesses that help to
+                                improve efficiency and profitability.
                             </p>
                             <p>
                                 I'm also the host/creator of a local monthly
