--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Duran Humes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="About Duran Humes" />
+        <meta
+            name="description"
+            content="About Duran Humes, Senior Software Engineer"
+        />
         <meta
             name="keywords"
-            content="Duran Humes, about, Software Engineer, full stack developer, front end developer, back end developer"
+            content="Duran Humes, about, Software Engineer, full stack developer, front end developer, back end developer, platoalpha, plato, alpha, design, software developer bahamas, software development bahamas, web design bahamas"
         />
         <meta name="author" content="Duran Humes" />
         <link rel="shortcut icon" href="favicon.ico" />
@@ -51,7 +54,7 @@
                                     ><img src="assets/resume.svg" alt="resume"
                                 /></a>
                                 <a
-                                    href="mailto:duranhumes@gmail.com?subject=Don't open... jk jk&body=Hey Duran!"
+                                    href="mailto:duran@platoalpha.com?subject=Don't open... jk jk ;)&body=Hey Duran!"
                                     target="_blank"
                                     ><img src="assets/email.svg" alt="email"
                                 /></a>
@@ -69,13 +72,13 @@
                             <p>
                                 On each of these different projects I became
                                 acquainted with many technologies and stacks
-                                like, JavaScript, React, React-Native, Node.js,
-                                PHP, Ruby, Docker, etc.
+                                like, PHP, JavaScript, React, React-Native,
+                                Node.js, Ruby, Docker, etc.
                             </p>
                             <p>
                                 Lately, my focus has been on my company
-                                <a href="http://baseroadsoftware.com"
-                                    >Baseroad Software</a
+                                <a href="https://platoalpha.com"
+                                    >Plato Alpha Design</a
                                 >
                                 building solutions for businesses that help to
                                 improve efficiency and profitability.
